--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "sass": "^1.22.12",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
